Tipos de variables

--- a/Temario/1-Variables-Vectores/3.2-Variables-String-Texto.md
+++ b/Temario/1-Variables-Vectores/3.2-Variables-String-Texto.md
@@ -44,7 +44,4 @@ console.log('Espero que no salga en llamas la cocina, otra vez.');
 
 Si ejecutamos el script `node index.js` podemos ver el nombre del cocinero.
 
-
-> Para las `variables que no cambian` se utilizan `constantes`, generalmente no se utiliza (por ahora) `JavaScript` por temas de compatibilidad.
-
-> Las constantes se escriben (por estándar, no es obligatorio) en `mayúsculas` separadas por `barras bajas`. *EJ:* `const NOMBRE_COCINERO`
+> Para las `variables que no cambian` se utilizan `constantes` las cuales veremos en breves.
