--- a/Temario/1-Variables-Vectores/3.2-Variables-String-Texto.md
+++ b/Temario/1-Variables-Vectores/3.2-Variables-String-Texto.md
@@ -2,7 +2,7 @@
 
 ## Preparación del entorno
 
-Utilizamos el archivo generado en [Operadores de Variables](/Ejemplos/1-Variables-Vectores/4-Variables-Texto.js).
+Utilizamos el archivo generado en [Operadores de Variables](/Ejemplos/1-Variables-Vectores/3.2-Variables-String-Texto.js).
 
 ## Introducción
 
